--- a/ocl-emu/opencl_emu/clemu/clemu.vcproj
+++ b/ocl-emu/opencl_emu/clemu/clemu.vcproj
@@ -187,7 +187,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;$(ATISTREAMSDKROOT)\include&quot;;&quot;$(CLEMU_ROOT)\include&quot;;&quot;$(CLEMU_ROOT)\runCL&quot;"
+				AdditionalIncludeDirectories="&quot;$(AMDAPPSDKROOT)\include&quot;;&quot;$(CLEMU_ROOT)\include&quot;;&quot;$(CLEMU_ROOT)\runCL&quot;"
 				PreprocessorDefinitions="NOMINMAX;"
 				RuntimeLibrary="1"
 				DebugInformationFormat="4"
