--- a/ocl-emu/opencl_emu/clemu/clemu.vcxproj
+++ b/ocl-emu/opencl_emu/clemu/clemu.vcxproj
@@ -125,6 +125,7 @@
     <ClInclude Include="clemu_opencl.h" />
     <ClInclude Include="clemu_runtime.hpp" />
     <ClInclude Include="clemu_vtypes_intrinsics.h" />
+    <ClInclude Include="MathFunctions.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
